# Algoritmos-de-busca-EDB1

./: CMakeLists.txt  README.md
include/: binarysearchwithduplicates.h  biotonicsearch.h  find_duplicates.h  findtheduplicate.h  findthejump.h  floorandceiling.h  identity.h  minimolocal.h  minimolocalmatriz.h  rowswithzero.h  search_rotatedarray.h  sumofthree.h  sumoftwo.h  upperbound.h
src/: CMakeLists.txt  a  b  binarysearchwithduplicates.cpp  biotonicsearch.cpp  c  f  find_duplicates.cpp  findtheduplicate.cpp  findthejump.cpp  floorandceiling.cpp  h  hotandcold.cpp  i  identity.cpp  minimolocal.cpp  minimolocalmatriz.cpp  p  r  rowswithzero.cpp  s  search_rotatedarray.cpp  sumofthree.cpp  sumoftwo.cpp  u  upperbound.cpp
tests/: CMakeLists.txt  test_binarysearch.cpp  test_biotonicsearch.cpp  test_find_duplicates.cpp  test_findtheduplicate.cpp  test_findthejump.cpp  test_floorandceiling.cpp  test_identity.cpp  test_minimolocal.cpp  test_minimolocalmatriz.cpp  test_rowswithzero.cpp  test_search_rotatedarray.cpp  test_sumofthree.cpp  test_sumoftwo.cpp  test_upperbound.cpp
