add_library(exercises
    binarysearchwithduplicates.cpp
    biotonicsearch.cpp
    find_duplicates.cpp
    findtheduplicate.cpp
    findthejump.cpp
    floorandceiling.cpp
    identity.cpp
    minimolocal.cpp
    minimolocalmatriz.cpp
    rowswithzero.cpp
    search_rotatedarray.cpp
    sumofthree.cpp
    sumoftwo.cpp
    upperbound.cpp
)

target_include_directories(exercises PUBLIC ../include)
